# TUM-IN2354-KinectFusion

./: .gitignore  README.md
KinectFusion/: CMakeLists.txt  MarchingCubes.h  PoseEstimation.h  SimpleMesh.h  SurfaceMeasurement.h  SurfacePrediction.h  SurfaceReconstructionUpdate.h  VirtualSensor_freiburg.h  VirtualSensor_office.h  Volume.cpp  Volume.h  common.h  main.cpp
KinectFusion-GPU/: CMakeLists.txt  FreeImageHelper.cpp  SimpleMesh.h  VirtualSensor_freiburg.h  Volume.cpp  Volume.h  common_functions.h  data_types.h  main.cu  pose_estimation.cu  pose_estimation.h  run  surface_measurement.cu  surface_measurement.h  surface_measurement.txt  surface_prediction.cu  surface_prediction.h  surface_reconstruction.cu  surface_reconstruction.h
KinectFusion-bin/: CMakeCache.txt  KinectFusion  Makefile  cmake_install.cmake
